Fix scroll-to-top btn display on mobile screens

--- a/style.css
+++ b/style.css
@@ -261,6 +261,7 @@ footer {
   color: #63769d;
 }
 
+/* Universal Scro to top btn */
 .scroll-to-top {
   position: fixed;
   bottom: 10vh;
@@ -349,6 +350,12 @@ footer {
   .copyright {
     font-size: 1.5vh;
     align-items: center;
+  }
+
+  /* Universal Scro to top btn */
+  .scroll-to-top {
+    bottom: 5vh;
+    right: 2.5vh;
   }
 }
 
